<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appNameShort">Bhavana Assistant</string>
    <string name="about">About</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="openWith">Open with</string>
    <string name="delete">Delete</string>
    <string name="sessions">Sessions</string>
    <string name="community">Community</string>
    <string name="forum">Forum</string>
    <string name="rate">Rate</string>
    <string name="refresh">Refresh</string>
    <string name="page">Page</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="account">Account</string>
    <string name="groups">Groups</string>
    <string name="announcement">Announcement</string>
    <string name="installFileManager">Please install a file manager</string>
    <string name="disableBatteryOptimizations">Meditation Assistant must run in the background</string>
    <string name="permissionRequest">Permission Request</string>
    <string name="permissionRequired">This permission is required.</string>
    <string name="permissionRequestNotificationControl">Please grant access on the next screen to control Do Not Disturb.</string>
    <string name="deny">Deny</string>
    <string name="tryAgain">Try Again</string>
    <string name="timer">Timer</string>
    <string name="timerHelp">Welcome to a brief tutorial. This is the session timer. Tap it now to change the timer mode and duration.</string>
    <string name="editTimerHelp">Your session may be a specific duration, may last until a specific time of day, or may not be timed at all.\n\nPresets may be used to store common configurations. Press and hold a preset to remember the current session duration. Sounds and other settings may also be remembered by presets by enabling them in "Preset Settings".\n\nAfter tapping OK, tap Cancel or Confirm to continue.</string>
    <string name="settingsHelp">This application includes numerous features and customizations. Tap the Settings icon to see these options.</string>
    <string name="medinetHelp">Sign in to MediNET to save your sessions online. You can import your sessions later if you lose your data. This feature is entirely optional, storing sessions locally will not hinder your experience.\n\nThis concludes the tutorial. I hope that Meditation Assistant will be beneficial for your practice.</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="confirm">Confirm</string>
    <string name="meditate">Meditate</string>
    <string name="tapToSkip">Skip</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="end">End</string>
    <string name="pauseOrEnd">Pause or end</string>
    <string name="resumeOrEnd">Resume or end</string>
    <string name="pausedNotification">Session paused, hold to end</string>
    <string name="mediNETConnecting">Connecting…</string>
    <string name="mediNETConnected">Connected to MediNET</string>
    <string name="sessionInProgress">Session in progress</string>
    <string name="sessionPaused">Session paused</string>
    <string name="progress">Progress</string>
    <string name="setPreset">Set preset</string>
    <string name="setPresetHint">Hold to set preset</string>
    <string name="setPresetTip">Choose which settings to restore by tapping the gear icon (Settings), then tap Preset settings.</string>
    <string name="setPresetHintBlank">Enter a duration (or end time) to set preset</string>
    <string name="setVibrationTip">Enter the number of milliseconds to turn the vibrator on or off, separated by commas.</string>
    <string name="configureWidget">Configure Widget</string>
    <string name="label">Label</string>
    <string name="pattern">Pattern</string>
    <string name="setTimerDurationHint">Enter a valid duration (e.g. 0:22)</string>
    <string name="setTimerEndAtHint">Enter a valid time (e.g. 4:20)</string>
    <string name="invalidEndAt">Invalid time to end session</string>
    <string name="timed">Timed</string>
    <string name="endAt">End at</string>
    <string name="untimed">Untimed</string>
    <string name="unlimited">Unlimited</string>
    <string name="presetLabelEndAt">End %s</string>
    <string name="resources">Resources</string>
    <string name="howToMeditate">How to meditate</string>
    <string name="meditationSubreddit">Reddit community</string>
    <string name="whatIsMediNET">MediNET overview</string>
    <string name="whatIsMediNETHelp">MediNET is an online meditation session repository and community.\n\nYou may choose to store your sessions on MediNET to prevent data loss and/or to share your progress with others online.\n\nYou may instead choose to store session data on the device only.</string>
    <string name="replayTutorial">Replay tutorial</string>
    <string name="tapToLearnMore">Tap anywhere to learn more</string>
    <string name="sendEmail">Send email</string>
    <string name="version">Version %s</string>
    <string name="translate">Translate</string>
    <string name="donate">Donate</string>
    <string name="chooseDonationMethod">Please choose how you would like to donate.\n\nLiberapay is preferred by the developer and supports more countries and currencies.</string>
    <string name="share">Share</string>
    <string name="sourceRepository">Source Code Repository</string>
    <string name="invitationBlurb">Meditation Assistant is a fully featured companion to your practice.</string>
    <string name="session">Session</string>
    <string name="sessionDeleteEverywhere">Delete everywhere</string>
    <string name="sessionDeleteLocally">Delete locally</string>
    <string name="sessionDeleteMediNET">Delete on MediNET</string>
    <string name="pref_sessionintro">Introduction</string>
    <string name="presetsettings">Preset settings</string>
    <string name="modeandduration">Mode and duration</string>
    <string name="streakdifferencewarning">Your current meditation streak does not seem correct based on current session data. Use updated meditation streak?\n\nCurrent streak: %1$d\nUpdated streak: %2$d</string>
    <string name="postUpdatedSession">Post updated session to MediNET?</string>
    <string name="sessioncomplete">Session Complete</string>
    <string name="sessionMessagePlaceholder">Message</string>
    <string name="askDiscardText">Discard session?</string>
    <string name="sessionPosting">Posting session…</string>
    <string name="sessionPosted">Session posted to MediNET</string>
    <string name="sessionAlreadyPosted">Session already posted</string>
    <string name="sessionNotPosted">Unable to post session</string>
    <string name="sessionNotPostedMeditating">Unable to post session while meditating</string>
    <string name="sessionSaved">Session saved</string>
    <string name="sessionDeletedLocally">Session deleted locally</string>
    <string name="browser">Browser</string>
    <string name="useBrowser">Use browser:</string>
    <string name="signInWith">Sign in with…</string>
    <string name="signInWithProvider">Sign in with %s…</string>
    <string name="signInWithOpenID">OpenID - Facebook, Twitter, etc.</string>
    <string name="signInGoogleError">Unable to authenticate using account manager. Try OpenID if this error persists.</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="totalTimeSpentMeditating">Total time spent meditating</string>
    <string name="dayMondayShort">Mon</string>
    <string name="dayTuesdayShort">Tue</string>
    <string name="dayWednesdayShort">Wed</string>
    <string name="dayThursdayShort">Thu</string>
    <string name="dayFridayShort">Fri</string>
    <string name="daySaturdayShort">Sat</string>
    <string name="daySundayShort">Sun</string>
    <string name="addSession">Add session</string>
    <string name="editSession">Edit session</string>
    <string name="sessionAdded">Session added</string>
    <string name="sessionEdited">Session edited</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="exportSessions">Export sessions</string>
    <string name="sessionExportFailed">Unable to export sessions</string>
    <string name="showExportedSessions">Sessions exported.  Would you like to browse the folder containing the export?</string>
    <string name="sessionStartedAt">Started at %s</string>
    <string name="started">Started</string>
    <string name="completed">Completed</string>
    <string name="length">Length</string>
    <string name="setDate">Set date</string>
    <string name="setTime">Set time</string>
    <string name="invalidDateOrTime">Invalid date or time</string>
    <string name="invalidLength">Invalid length</string>
    <string name="addSessionMeditating">Unable to add a session while meditating</string>
    <string name="editSessionMeditating">Unable to edit a session while meditating</string>
    <string name="sessionExists">Session already exists</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="totalSessions">Total sessions</string>
    <string name="averageDuration">Average duration</string>
    <string name="longestDuration">Longest duration</string>
    <string name="longestStreak">Longest streak</string>
    <string name="reminderText">Do you have a moment?</string>
    <string name="meditation">Meditation</string>
    <string name="vibrate">Vibrate</string>
    <string name="pref_meditation_vibrate_start">Start vibration</string>
    <string name="pref_meditation_vibrate_interval">Interval vibration</string>
    <string name="pref_meditation_vibrate_finish">Complete vibration</string>
    <string name="pref_vibrate_summary">Occurs at the beginning, intervals, and end of meditation</string>
    <string name="pref_vibrate_reminder_summary">The daily reminder will vibrate the device</string>
    <string name="pref_sound_reminder">Play sound</string>
    <string name="pref_sound_reminder_summary">The default notification sound will be played</string>
    <string name="pref_softfinish">Endless session</string>
    <string name="pref_softfinish_summary">Keep the timer running</string>
    <string name="settings">Settings</string>
    <string name="disabled">Disabled</string>
    <string name="none">None</string>
    <string name="noSpecialBehavior">No special behavior</string>
    <string name="labelShort">Short</string>
    <string name="labelMedium">Medium</string>
    <string name="labelLong">Long</string>
    <string name="custom">Custom</string>
    <string name="noSound">No sound</string>
    <string name="customSound">Custom sound</string>
    <string name="duringSession">During session</string>
    <string name="always">Always</string>
    <string name="keepScreenOn">Keep screen on</string>
    <string name="keepScreenOnAndDim">Keep screen on and dim</string>
    <string name="dimScreen">Dim screen</string>
    <string name="pref_display_seconds">Display seconds</string>
    <string name="pref_display_seconds_summary">Shown below the main timer</string>
    <string name="pref_meditationstreakbuffer">Streak resets at</string>
    <string name="pref_full_screen">Full screen</string>
    <string name="pref_delay">Delay</string>
    <string name="pref_interval">Interval duration</string>
    <string name="pref_interval_count">Interval count</string>
    <string name="pref_sessionvolume">Volume</string>
    <string name="pref_meditation_sound_start">Start sound</string>
    <string name="pref_meditation_sound_interval">Interval sound</string>
    <string name="pref_meditation_sound_finish">Complete sound</string>
    <string name="pref_notificationcontrol">Ringtone and notifications</string>
</resources>