<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="pref_cat_session"
        android:title="@string/session"/>

    <EditTextPreference
        android:icon="?attr/actionIconViewAsList"
        android:dialogIcon="?attr/actionIconViewAsList"
        android:defaultValue="@string/ignore_introphrase"
        android:key="pref_sessionintro"
        android:summary=""
        android:title="@string/pref_sessionintro"/>

    <net.gnu.meditationassistant.TimePreference
        android:defaultValue="00:30"
        android:dialogIcon="?attr/actionIconTime"
        android:icon="?attr/actionIconTime"
        android:key="pref_session_delay"
        android:summary=""
        android:title="@string/pref_delay"
        app:is24hour="true"
        app:maxHours="90"/>

    <net.gnu.meditationassistant.ListPreferenceSound
        android:defaultValue="gong_heavy"
        android:dialogIcon="?attr/actionIconVolumeOn"
        android:entries="@array/meditation_sounds"
        android:entryValues="@array/meditation_sounds_values"
        android:icon="?attr/actionIconVolumeOn"
        android:key="pref_meditation_sound_start"
        android:title="@string/pref_meditation_sound_start"/>

    <net.gnu.meditationassistant.ListPreferenceVibration
        android:defaultValue=""
        android:dialogIcon="?attr/actionIconFlashOn"
        android:entries="@array/vibration"
        android:entryValues="@array/vibration_values"
        android:icon="?attr/actionIconFlashOn"
        android:key="pref_meditation_vibrate_start"
        android:title="@string/pref_meditation_vibrate_start"/>

    <net.gnu.meditationassistant.TimePreference
        android:defaultValue="60:00"
        android:dialogIcon="?attr/actionIconTime"
        android:icon="?attr/actionIconTime"
        android:key="pref_session_interval"
        android:summary=""
        android:title="@string/pref_interval"
        app:is24hour="true"
        app:maxHours="90"/>

    <net.gnu.meditationassistant.ListPreferenceSound
        android:defaultValue="gong"
        android:dialogIcon="?attr/actionIconVolumeOn"
        android:entries="@array/meditation_sounds"
        android:entryValues="@array/meditation_sounds_values"
        android:icon="?attr/actionIconVolumeOn"
        android:key="pref_meditation_sound_interval"
        android:title="@string/pref_meditation_sound_interval"/>

    <net.gnu.meditationassistant.ListPreferenceVibration
        android:defaultValue=""
        android:dialogIcon="?attr/actionIconFlashOn"
        android:entries="@array/vibration"
        android:entryValues="@array/vibration_values"
        android:icon="?attr/actionIconFlashOn"
        android:key="pref_meditation_vibrate_interval"
        android:title="@string/pref_meditation_vibrate_interval"/>

    <EditTextPreference
        android:defaultValue=""
        android:dialogIcon="?attr/actionIconRefresh"
        android:icon="?attr/actionIconRefresh"
        android:inputType="number"
        android:key="pref_interval_count"
        android:summary=""
        android:title="@string/pref_interval_count"/>

    <net.gnu.meditationassistant.ListPreferenceSound
        android:defaultValue="gong"
        android:dialogIcon="?attr/actionIconVolumeOn"
        android:entries="@array/meditation_sounds"
        android:entryValues="@array/meditation_sounds_values"
        android:icon="?attr/actionIconVolumeOn"
        android:key="pref_meditation_sound_finish"
        android:title="@string/pref_meditation_sound_finish"/>

    <net.gnu.meditationassistant.ListPreferenceVibration
        android:defaultValue=""
        android:dialogIcon="?attr/actionIconFlashOn"
        android:entries="@array/vibration"
        android:entryValues="@array/vibration_values"
        android:icon="?attr/actionIconFlashOn"
        android:key="pref_meditation_vibrate_finish"
        android:title="@string/pref_meditation_vibrate_finish"/>

    <ListPreference
        android:defaultValue=""
        android:dialogIcon="?attr/actionIconRingVolume"
        android:entries="@array/notificationcontrol"
        android:entryValues="@array/notificationcontrol_values"
        android:icon="?attr/actionIconRingVolume"
        android:key="pref_notificationcontrol"
        android:title="@string/pref_notificationcontrol"/>

    <net.gnu.meditationassistant.SeekBarPreference
        android:dialogIcon="?attr/actionIconVolumeOn"
        android:icon="?attr/actionIconVolumeOn"
        android:defaultValue="70"
        android:key="pref_sessionvolume"
        android:summary=""
        android:title="@string/pref_sessionvolume"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="?attr/actionIconTime"
        android:key="pref_softfinish"
        android:summary="@string/pref_softfinish_summary"
        android:title="@string/pref_softfinish"/>

    <MultiSelectListPreference
        android:defaultValue="@array/presetsettings_default"
        android:dialogIcon="?attr/actionIconForward"
        android:entries="@array/presetsettings"
        android:entryValues="@array/presetsettings_values"
        android:key="pref_presetsettings"
        android:title="@string/presetsettings"/>

</PreferenceScreen>
